src/objects/BATCH_JOB_SCHEDULER__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Parallel_Jobs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Parallel Jobs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Code__c</fullName>
        <label>Batch Code</label>
        <picklist>
            <picklistValues>
                <fullName>SP001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP026</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_Parallel_jobs__c</fullName>
        <description>Details of Parallel jobs in Key and Value pair
Key - Job Id
Value - 0-Success , 1-Failure</description>
        <label>Details of Parallel jobs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LP_Days_Before_Expiration__c</fullName>
        <label>LP - Days Before Expiration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Letter_Print_Request_Count__c</fullName>
        <label>Letter Print Request Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parallel_Jobs_Executed__c</fullName>
        <description>Number of Parallel Jobs Executed</description>
        <label>Number of Parallel Jobs Executed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parallel_Jobs__c</fullName>
        <label>Number of Parallel Jobs</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BATCH_JOB_SCHEDULER Parallel jobs parent Job record</description>
        <label>Parent Job</label>
        <referenceTo>BATCH_JOB_SCHEDULER__c</referenceTo>
        <relationshipLabel>BATCH_JOB_SCHEDULER</relationshipLabel>
        <relationshipName>BATCH_JOB_SCHEDULER</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Job_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>SFDC_Job_id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>STARTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABORTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAILED</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_of_Parallel_jobs__c</fullName>
        <description>Status of Parallel jobs in Binary format 
0-Success
1-Failure</description>
        <label>Status of Parallel jobs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BATCH_JOB_SCHEDULER</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Code__c</columns>
        <columns>Batch_Run_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>SFDC_Job_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>For_Verification</fullName>
        <columns>NAME</columns>
        <columns>Batch_Code__c</columns>
        <columns>Batch_Run_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>SFDC_Job_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Code__c</field>
            <operation>equals</operation>
            <value>SP028</value>
        </filters>
        <label>For Verification</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Batch_Code__c</columns>
        <columns>Batch_Run_Date__c</columns>
        <columns>Start_Time__c</columns>
        <columns>End_Time__c</columns>
        <columns>Status__c</columns>
        <columns>SFDC_Job_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today &apos;s Jobs</label>
    </listViews>
    <nameField>
        <displayFormat>SBRR-{0000000000}</displayFormat>
        <label>SP Batch Run Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BATCH_JOB_SCHEDULER</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>